[tool.poetry]
name = "wireframe"
version = "0.1.0"
description = ""
authors = ["Oleh Hrynko <oleh.hrynko@aengizer.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
hypercorn = "^0.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
